# ruff-report

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
ruff_report/: analyze_report.py  cli.py  datatype.py  save_report.py
tests/: test_datatype.py  test_save_report.py
