[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruff-report"
version = "0.1.0"
description = "ruff violation report hook for pre-commit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
authors = [{ name = "takeshid", email = "goriponikeike55@gmail.com" }]
dependencies = [
    "pydantic>=2.0",
 "ruff>=0.11",
 "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/takeshid/ruff-report"
Repository = "https://github.com/takeshid/ruff-report.git"

[project.scripts]
ruff-report = "ruff_report.cli:app"

[tool.ruff]
line-length = 88
indent-width = 4
include = ["ruff_report/**/*.py", "tests/**/*.py"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D103", "S603", "D101", "D401", "T201", "DTZ005", "COM", "ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
addopts = "-ra -vv"
testpaths = ["tests"]
